# sayan-service

./: .codeclimate.yml  .coveragerc  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  MANIFEST.in  Pipfile  README.md  autoapp.py  docker-compose.yml  gunicorn_config.py  pyproject.toml  setup.cfg  setup.py  structlogger.py
.circleci/: config.yml  docker-compose.override.yml
.github/: dependabot.yml  settings.yml  stale.yml
docs/: Makefile  conf.py  index.rst  metrics.rst  settings.rst
docs/_build/: index.htm
helm/: README.md  values.yaml
helm/ci/: test-values.yaml
migrations/: env.py  script.py.mako
migrations/versions/: 1f3ddc3890e6_install_postgres_extensions.py
sayan_service/: __init__.py  app.py  database.py  errors.py  http.py  serializer.py  settings.py
sayan_service/api/: __init__.py
sayan_service/api/v1/: __init__.py  spec.yaml
sayan_service/api/v1/health/: __init__.py  endpoints.py
sayan_service/commands/: __init__.py  seed.py
sayan_service/extensions/: __init__.py  flask_structlog.py
tests/: __init__.py  conftest.py
tests/factories/: __init__.py  base.py  factories.py
tests/functional/: __init__.py
tests/functional/api/: __init__.py
tests/functional/api/v1/: __init__.py
tests/functional/api/v1/health/: __init__.py  test_endpoints.py
tests/integration/: __init__.py
tests/integration/api/: __init__.py
tests/integration/api/v1/: __init__.py
tests/integration/api/v1/health/: __init__.py  test_endpoints.py
tests/unit/: __init__.py
tests/unit/api/: __init__.py
tests/unit/api/v1/: __init__.py
tests/unit/api/v1/health/: __init__.py  test_endpoints.py
