##
# https://setuptools.readthedocs.io/en/latest/setuptools.html#configuring-setup-using-setup-cfg-files
#

[metadata]
name = sayan_service
##
# The version in this file is ignored if the version
# can be inferred from git tags using setuptools_scm.
version = 0.1.0.dev0+missinggit
description = A new service for doing things.
long_description = A new service for doing things.
author = Syapse, Inc.
author_email = noreply@syapse.com
url = https://github.com/syapse/sayan_service
license = Proprietary
classifiers =
    Framework :: Flask
    Intended Audience :: Healthcare Industry
    License :: Other/Proprietary License
    Programming Language :: Python :: 3.9

[options]
zip_safe = False
include_package_data = True
packages = find:
setup_requires =
    setuptools-scm
install_requires =
    click==8.0.1
    connexion[swagger-ui]==2.7.0
    flask-bcrypt==0.7.1
    flask-caching==1.10.1
    flask-cors==3.0.10
    flask-marshmallow==0.14.0
    flask-migrate==3.0.1
    flask-sqlalchemy==2.5.1
    flask==1.1.4
    marshmallow-enum==1.5.1
    marshmallow-sqlalchemy==0.26.0
    prometheus-flask-exporter==0.18.2
    psycopg2-binary==2.8.6
    python-decouple==3.4
    sqlalchemy==1.4.17
    structlog==21.1.0
    werkzeug==1.0.1

[options.extras_require]
dev =
    awscli-local==0.15
    check-manifest==0.46
    colorama==0.4.4
    isort==5.8.0
    recommonmark==0.7.1
    sphinx==4.2.0
test =
    factory-boy==3.2.0
    pytest-mock==3.6.1
    mock==4.0.3
    pyroma==3.1
    pytest-cov==4.0.0
    pytest-faker==2.0.0
    pytest-flask==1.2.0
prod =
    gunicorn[gevent]==20.1.0

[tool:pytest]
python_files = tests.py test_*.py *_tests.py
mock_use_standalone_module = True

[pep8]
ignore = D401, D210, E201, E202
max-line-length = 120

[check-manifest]
ignore =
    .circleci
    .circleci/*
    .dockerignore
    .github
    .github/*
    bin
    bin/*
